--- a/spring-security/src/main/resources/templates/changePassword.html
+++ b/spring-security/src/main/resources/templates/changePassword.html
@@ -4,7 +4,7 @@
 <head>
     <title>Change password page</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/main.css}" />
+    <!-- <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/main.css}" /> -->
 </head>
 
 <body>
