--- a/spring-security/src/main/resources/templates/login.html
+++ b/spring-security/src/main/resources/templates/login.html
@@ -18,6 +18,10 @@
     <div th:if="${param.sessionexpired}">Session expired. Please log in again.</div>
     <div th:if="${param.sessionautherror}">Session authentication error. Please log in again.</div>
 
+    <div th:if="${result}" th:text="${result.getMessage()}" class="result-message">
+        <!-- This div will display the appropriate message based on the result -->
+    </div>
+
     <form th:action="@{/login}" method="post">
         <label for="username">Username</label>:
         <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
